[Shubham][1-Aug] Adding Server details

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <a href="https://unsplash.com/">Unsplash</a>!</p> -->
           <p>Being a 90's kid I have witnessed the change and advancement in the field of technology and I believe Information Technology is an incredibly exciting subject that will allow us to make a difference to the world and change it in a positive way.</p>
           <br/>
-          <p>I am a highly motivated and hardworking individual, who has completed his graduation in the field if IT and is working with one of the best banks, in its technology side. Eventual career goal is to become a fully-qualified and get experience with different technologies that shall be productive and helpful for the people around the world.</p>
+          <p>I am a highly motivated and hardworking individual, who has completed his graduation in the field if IT and has worked in the fintech sector. Eventual career goal is to become a fully-qualified and get experience with different technologies that shall be productive and helpful for the people around the world.</p>
           <!-- <a class="btn btn-dar btn-xl js-scroll-trigger" href="#services">Resume</a> -->
         </div>
         <div class="col-md-6 col-sm-12 ">
@@ -255,9 +255,9 @@
         <div class="col-lg-2 col-sm-2 col-4">
           <a href="#!">
               <div data-tilt class="thumbnail rounded">
-                <img class="img-fluid" src="./img/tech/Java.png" />
+                <img class="img-fluid" src="./img/tech/m-ui.png" />
               </div>
-              <div style="text-align: center; margin-top: 10px; color: black;">Java</div>
+              <div style="text-align: center; margin-top: 10px; color: black;">Material-UI</div>
           </a>
         </div>
         <div class="col-lg-2 col-sm-2 col-4">
@@ -324,16 +324,6 @@
                 <img class="img-fluid" src="./img/tech/sonarqube-logo.png" />
               </div>
               <div style="text-align: center; margin-top: 10px; color: black;">SonarQube</div>
-          </a>
-        </div>
-      </div>
-      <div class="row" style="margin-top: 30px;">        
-        <div class="col-lg-2 col-sm-2 col-4">
-          <a href="#!">
-              <div data-tilt class="thumbnail rounded">
-                <img class="img-fluid" src="./img/tech/m-ui.png" />
-              </div>
-              <div style="text-align: center; margin-top: 10px; color: black;">Material-UI</div>
           </a>
         </div>
       </div>
@@ -456,6 +446,19 @@
                 <p class="mb-4">
                   E-commerce web application selling online courses with frontend deployed on netlify and backend has been deployed on render with APIs for the application
                 </p>
+                <div>
+                  <p>
+                    <b>
+                    Server Details -
+                    </b>
+                    <div>
+                    Backend  : Vercel ⭐️⭐️⭐️
+                    </div>
+                    <div>
+                    Frontend : Netlify ⭐️⭐️⭐️⭐️
+                    </div>
+                  </p>
+                </div>
               </div>
               <div>
               <div>
@@ -504,6 +507,21 @@
                 <p class="mb-4">
                   Application consuming an API to fetch the details of different movies.
                 </p>
+                <div>
+                  <p>
+                    <b>
+                    Server Details -
+                    </b>
+                    <div>
+                    Backend  : <a target="_blank" href="https://www.themoviedb.org/">
+                      TMDB API
+                    </a> ⚠️
+                    </div>
+                    <div>
+                    Frontend : Netlify    ⭐️⭐️⭐️⭐️
+                    </div>
+                  </p>
+                </div>
               </div>
               <div>
                   <a>
@@ -538,6 +556,16 @@
                     </div>                       
                   </div>  -->
                 </p>
+                <div>
+                  <p>
+                    <b>
+                    Server Details -
+                    </b>
+                    <div>
+                    Frontend : Netlify ⭐️⭐️⭐️⭐️⭐️
+                    </div>
+                  </p>
+                </div>
               </div>
               <div>
               <div>
@@ -584,6 +612,16 @@
                 <p class="mb-4">
                   An online screen recording application that allows the user to save the video after the recording.
                 </p>
+                <div>
+                  <p>
+                    <b>
+                    Server Details -
+                    </b>
+                    <div>
+                    Frontend : Netlify ⭐️⭐️⭐️⭐️⭐️
+                    </div>
+                  </p>
+                </div>
               </div>
               <div>
                 <a>
