[Shubham][1-Aug] Adding projectD

--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
                     Server Details -
                     </b>
                     <div>
-                    Backend  : Vercel ⭐️⭐️⭐️
+                    Backend  : Render ⭐️⭐️⭐️
                     </div>
                     <div>
                     Frontend : Netlify ⭐️⭐️⭐️⭐️
@@ -502,10 +502,10 @@
           </div>
           <div class="col-lg-4 col-sm-12">
             <div class="project-wrapper__text">
-              <h3 class="project-wrapper__text-title">CINEMA APP - <a><i class="fas fa-mobile-alt" style="font-size: 1rem;" ></i></a> <a><i class="fas fa-desktop" style="font-size: 1rem;"></i></a></h3>
+              <h3 class="project-wrapper__text-title">Cinemate - <a><i class="fas fa-mobile-alt" style="font-size: 1rem;" ></i></a> <a><i class="fas fa-desktop" style="font-size: 1rem;"></i></a></h3>
               <div>
                 <p class="mb-4">
-                  Application consuming an API to fetch the details of different movies.
+                  Your own Netflix based on the a prebuilt movie database where the application consuming an API to fetch the details of different movies.
                 </p>
                 <div>
                   <p>
@@ -540,6 +540,54 @@
                 See Live
               </a>
             </div>
+          </div>
+        </div>
+        <div class="row" style="margin-top: 50px;">
+          <div class="col-lg-4 col-sm-12">
+            <div class="project-wrapper__text">
+              <h3 class="project-wrapper__text-title">Movie Recommender - <a><i class="fas fa-mobile-alt" style="font-size: 1rem;" ></i></a> <a><i class="fas fa-desktop" style="font-size: 1rem;"></i></a></h3>
+              <div>
+                <p class="mb-4">
+                  Helping you in suggesting your next movie based on database of more than 5000 movies. The recommendation model works on 'Bag of words' technique where based out of few important features, vectorization is done to find the similarities between the movies
+                </p>
+                <div>
+                  <p>
+                    <b>
+                    Server Details -
+                    </b>
+                    <div>
+                    Backtend : Render    ⭐️⭐️
+                    </div>                    
+                    <div>
+                    Frontend : Render    ⭐️⭐️⭐️⭐️
+                    </div>
+                  </p>
+                </div>
+              </div>
+              <div>
+                  <a>
+                    <i class="fab fa-github" style="font-size: 2rem;"></i>
+                    <i class="fab fa-python" style="font-size: 2rem;"></i>
+                    <i class="fas fa-file-excel" style="font-size: 2rem;"></i>
+                    <i class="fas fa-table" style="font-size: 2rem;"></i>
+                    <i class="fas fa-magnifying-glass-chart" style="font-size: 2rem;"></i>
+                    <i class="fas fa-chart-line" style="font-size: 2rem;"></i>
+                    <img src="./img/tech/api.png" style="margin-left: 4px;
+                    margin-top: -15px;
+                    height: 35px;"/>
+                  </a>
+              </div>
+              <a target="_blank" class="cta-btn cta-btn--hero" href="https://movie-recommender-397r.onrender.com/">
+                See Live
+              </a>
+            </div>
+          </div>
+          <div class="col-lg-8 col-sm-12">
+            <a class="portfolio-item" href="#!">
+                <div data-tilt class="thumbnail rounded">
+                  <img class="img-fluid" src="./img/projects/mr.png" />
+                </div>
+            </a>
           </div>
         </div>
         <div class="row" style="margin-top: 50px;">
