[Shubham][30-Aug] About me change

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <a href="https://unsplash.com/">Unsplash</a>!</p> -->
           <p>Being a 90's kid I have witnessed the change and advancement in the field of technology and I believe Information Technology is an incredibly exciting subject that will allow us to make a difference to the world and change it in a positive way.</p>
           <br/>
-          <p>I am a highly motivated and hardworking individual, who has completed his graduation in the field if IT and has worked in the fintech sector. Eventual career goal is to become a fully-qualified and get experience with different technologies that shall be productive and helpful for the people around the world.</p>
+          <p>I am a highly motivated and hardworking individual, who has completed his graduation in the field if IT and has worked in the fintech sector. Currently pursuing his masters in Singapore with eventual career goal is to skill up, gain experience with different technologies and bridge the understanding with business that shall be productive and helpful for the people around the world.</p>
           <!-- <a class="btn btn-dar btn-xl js-scroll-trigger" href="#services">Resume</a> -->
         </div>
         <div class="col-md-6 col-sm-12 ">
