--- a/index.html
+++ b/index.html
@@ -165,6 +165,39 @@
             alt="Profile Image"
           />
         </div>
+      </div>  
+    </div>
+    <div class="container text-center">
+      <div class="row">
+        <div class="col-md-3 col-sm-6 ">
+          <img
+            height="auto"
+            width="150px"
+            src="./img/kiit.png"
+            alt="Profile Image"
+            margin="20px"
+          />
+          <p><b>B.Tech in IT<br/>June 2015 to May 2019<br/>Bhubaneswar, India</b></p>
+        </div>
+        <div class="col-md-3 col-sm-6">
+          <img
+            height="auto"
+            width="200px"
+            src="./img/scb.jpeg"
+            alt="Profile Image"
+          />
+          <p><b>Analyst <br/>June 2019 to April 2022<br/>Bangalore, India</b></p>
+        </div>
+        <div class="col-md-3 col-sm-6 hr">
+          <img
+            height="auto"
+            width="200px"
+            margin-top="20px"
+            src="./img/HighRadius_Logo.jpg"
+            alt="Profile Image"
+          />
+          <p><b><br/>Senior Associate<br/>April 2022 to Aug 2024<br/>Hyderabad, India</b></p>
+        </div>
       </div>
     </div>
   </section>
