[Shubham][1-Sept] Adding timeline

--- a/index.html
+++ b/index.html
@@ -198,6 +198,15 @@
           />
           <p><b><br/>Senior Associate<br/>April 2022 to Aug 2024<br/>Hyderabad, India</b></p>
         </div>
+        <div class="col-md-3 col-sm-6 ">
+          <img
+            height="auto"
+            width="150px"
+            src="./img/images.png"
+            alt="Profile Image"
+          />
+          <p><b>Masters in IT and Business<br/>Aug 2024 to Present<br/>Singapore</b></p>
+        </div>
       </div>
     </div>
   </section>
