[Shubham][1-Sept] Adding timeline

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
           />
           <p><b><br/>Senior Associate<br/>April 2022 to Aug 2024<br/>Hyderabad, India</b></p>
         </div>
-        <div class="col-md-3 col-sm-6 ">
+        <div class="col-md-3 col-sm-6 smu">
           <img
             height="auto"
             width="150px"
