[Shubham][1-Sept] Adding timeline

--- a/index.html
+++ b/index.html
@@ -177,7 +177,9 @@
             alt="Profile Image"
             margin="20px"
           />
-          <p><b>B.Tech in IT<br/>June 2015 to May 2019<br/>Bhubaneswar, India</b></p>
+          <div class="space-kiit">
+            <p><b>B.Tech in IT<br/>June 2015 to May 2019<br/>Bhubaneswar, India</b></p>
+          </div>
         </div>
         <div class="col-md-3 col-sm-6">
           <img
@@ -186,7 +188,9 @@
             src="./img/scb.jpeg"
             alt="Profile Image"
           />
+          <div class="space-scb">
           <p><b>Analyst <br/>June 2019 to April 2022<br/>Bangalore, India</b></p>
+          </div>
         </div>
         <div class="col-md-3 col-sm-6 hr">
           <img
