[Shubham][1-Sept] Adding timeline

--- a/index.html
+++ b/index.html
@@ -200,7 +200,9 @@
             src="./img/HighRadius_Logo.jpg"
             alt="Profile Image"
           />
+          <div class="space-hrc">
           <p><b><br/>Senior Associate<br/>April 2022 to Aug 2024<br/>Hyderabad, India</b></p>
+          </div>
         </div>
         <div class="col-md-3 col-sm-6 smu">
           <img
