[Shubham][5-Sept] Studify change

--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
         <div class="row">
           <div class="col-lg-4 col-sm-12">
             <div class="project-wrapper__text">
-              <h3 class="project-wrapper__text-title">Sportify
+              <h3 class="project-wrapper__text-title">Studify
                 <a><i class="fas fa-mobile-alt" style="font-size: 1rem;" ></i></a> 
                 <a><i class="fas fa-desktop" style="font-size: 1rem;"></i></a>
               </h3>
