[Shubham][30-Nov] Change in the description

--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
                     Server Details -
                     </b>
                     <div>
-                    Backtend : Render    ⭐️⭐️
+                    Backend : Render    ⭐️⭐️
                     </div>                    
                     <div>
                     Frontend : Render    ⭐️⭐️⭐️⭐️
