[Shubham][21-4] Portfolio Skills

--- a/index.html
+++ b/index.html
@@ -243,9 +243,9 @@
         <div class="col-lg-2 col-sm-2 col-4">
           <a href="#!">
               <div data-tilt class="thumbnail rounded">
-                <img class="img-fluid" src="./img/tech/mong.png" />
+                <img class="img-fluid" src="./img/tech/sql.jpeg" />
               </div>
-              <div style="text-align: center; margin-top: 10px; color: black;">Mongo DB</div>
+              <div style="text-align: center; margin-top: 10px; color: black;">SQL</div>
           </a>
         </div>
       </div>
@@ -253,9 +253,9 @@
         <div class="col-lg-2 col-sm-2 col-4">
           <a href="#!">
               <div data-tilt class="thumbnail rounded">
-                <img class="img-fluid" src="./img/tech/express (2).png" />
+                <img class="img-fluid" src="./img/tech/api.jpg" />
               </div>
-              <div style="text-align: center; margin-top: 10px; color: black;">Express JS</div>
+              <div style="text-align: center; margin-top: 10px; color: black;">API</div>
           </a>
         </div>
         
@@ -384,6 +384,22 @@
                 <img class="img-fluid" src="./img/tech/Git.png" />
               </div>
               <div style="text-align: center; margin-top: 10px; color: black;">Git</div>
+          </a>
+        </div>
+        <div class="col-lg-2 col-sm-2 col-4">
+          <a href="#!">
+              <div data-tilt class="thumbnail rounded">
+                <img class="img-fluid" src="./img/tech/bizreq.png" />
+              </div>
+              <div style="text-align: center; margin-top: 10px; color: black;">Business Requirement Gathering</div>
+          </a>
+        </div>
+        <div class="col-lg-2 col-sm-2 col-4">
+          <a href="#!">
+              <div data-tilt class="thumbnail rounded">
+                <img class="img-fluid" src="./img/tech/change.jpg" />
+              </div>
+              <div style="text-align: center; margin-top: 10px; color: black;">Change Management</div>
           </a>
         </div>
         <div class="col-lg-2 col-sm-2 col-4">
