[Shubham][21-4] Portfolio Skills

--- a/index.html
+++ b/index.html
@@ -320,17 +320,17 @@
         <div class="col-lg-2 col-sm-2 col-4">
           <a href="#!">
               <div data-tilt class="thumbnail rounded">
-                <img class="img-fluid" src="./img/tech/graphql.png" />
+                <img class="img-fluid" src="./img/tech/excel.png" />
               </div>
-              <div style="text-align: center; margin-top: 10px; color: black;">Graph QL</div>
+              <div style="text-align: center; margin-top: 10px; color: black;">MS Excel</div>
           </a>
         </div>
         <div class="col-lg-2 col-sm-2 col-4">
           <a href="#!">
               <div data-tilt class="thumbnail rounded">
-                <img class="img-fluid" src="./img/tech/bootstrap.png" />
+                <img class="img-fluid" src="./img/tech/ETL.jpg" />
               </div>
-              <div style="text-align: center; margin-top: 10px; color: black;">Bootstrap</div>
+              <div style="text-align: center; margin-top: 10px; color: black;">ETL & ELT</div>
           </a>
         </div>
         <div class="col-lg-2 col-sm-2 col-4">
@@ -400,6 +400,14 @@
                 <img class="img-fluid" src="./img/tech/change.jpg" />
               </div>
               <div style="text-align: center; margin-top: 10px; color: black;">Change Management</div>
+          </a>
+        </div>
+        <div class="col-lg-2 col-sm-2 col-4">
+          <a href="#!">
+              <div data-tilt class="thumbnail rounded">
+                <img class="img-fluid" src="./img/tech/doc.png" />
+              </div>
+              <div style="text-align: center; margin-top: 10px; color: black;">Reporting & Documentation</div>
           </a>
         </div>
         <div class="col-lg-2 col-sm-2 col-4">
