[Shubham][21-4] Portfolio Skills

--- a/index.html
+++ b/index.html
@@ -262,25 +262,25 @@
         <div class="col-lg-2 col-sm-2 col-4">
           <a href="#!">
               <div data-tilt class="thumbnail rounded">
-                <img class="img-fluid" src="./img/tech/bug.png" />
+                <img class="img-fluid" src="./img/tech/User Acceptance testing.png" />
               </div>
-              <div style="text-align: center; margin-top: 10px; color: black;">Unit Testing</div>
+              <div style="text-align: center; margin-top: 10px; color: black;">SIT & UAT</div>
           </a>
         </div>
         <div class="col-lg-2 col-sm-2 col-4">
           <a href="#!">
               <div data-tilt class="thumbnail rounded">
-                <img class="img-fluid" src="./img/tech/cpp.png" />
+                <img class="img-fluid" src="./img/tech/sas.png" />
               </div>
-              <div style="text-align: center; margin-top: 10px; color: black;">C++</div>
+              <div style="text-align: center; margin-top: 10px; color: black;">SAS</div>
           </a>
         </div>
         <div class="col-lg-2 col-sm-2 col-4">
           <a href="#!">
               <div data-tilt class="thumbnail rounded">
-                <img class="img-fluid" src="./img/tech/m-ui.png" />
+                <img class="img-fluid" src="./img/tech/pbi.jpeg" />
               </div>
-              <div style="text-align: center; margin-top: 10px; color: black;">Material-UI</div>
+              <div style="text-align: center; margin-top: 10px; color: black;">Power BI</div>
           </a>
         </div>
         <div class="col-lg-2 col-sm-2 col-4">
@@ -304,17 +304,17 @@
         <div class="col-lg-2 col-sm-2 col-4">
           <a href="#!">
               <div data-tilt class="thumbnail rounded">
-                <img class="img-fluid" src="./img/tech/npm.png" />
+                <img class="img-fluid" src="./img/tech/pandas.png" />
               </div>
-              <div style="text-align: center; margin-top: 10px; color: black;">npm</div>
+              <div style="text-align: center; margin-top: 10px; color: black;">Pandas</div>
           </a>
         </div>
         <div class="col-lg-2 col-sm-2 col-4">
           <a href="#!">
               <div data-tilt class="thumbnail rounded">
-                <img class="img-fluid" src="./img/tech/antd.svg" />
+                <img class="img-fluid" src="./img/tech/numpy.png" />
               </div>
-              <div style="text-align: center; margin-top: 10px; color: black;">Ant Design</div>
+              <div style="text-align: center; margin-top: 10px; color: black;">Numpy</div>
           </a>
         </div>
         <div class="col-lg-2 col-sm-2 col-4">
@@ -344,9 +344,9 @@
         <div class="col-lg-2 col-sm-2 col-4">
           <a href="#!">
               <div data-tilt class="thumbnail rounded" style="padding: 50px 0px 50px 0px;">
-                <img class="img-fluid" src="./img/tech/sonarqube-logo.png" />
+                <img class="img-fluid" src="./img/tech/web3.png" />
               </div>
-              <div style="text-align: center; margin-top: 10px; color: black;">SonarQube</div>
+              <div style="text-align: center; margin-top: 10px; color: black;">Web3</div>
           </a>
         </div>
       </div>
@@ -424,6 +424,22 @@
                 <img class="img-fluid" src="./img/tech/Agile.png" />
               </div>
               <div style="text-align: center; margin-top: 10px; color: black;">Agile Methodology</div>
+          </a>
+        </div>
+        <div class="col-lg-2 col-sm-2 col-4">
+          <a href="#!">
+              <div data-tilt class="thumbnail rounded">
+                <img class="img-fluid" src="./img/tech/kpi.webp" />
+              </div>
+              <div style="text-align: center; margin-top: 10px; color: black;">KPI Tracking</div>
+          </a>
+        </div>
+        <div class="col-lg-2 col-sm-2 col-4">
+          <a href="#!">
+              <div data-tilt class="thumbnail rounded">
+                <img class="img-fluid" src="./img/tech/sh.jpg" />
+              </div>
+              <div style="text-align: center; margin-top: 10px; color: black;">Stakeholder Management</div>
           </a>
         </div>
       </div>
