[Shubham][21-4] Portfolio Skills

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
               <div data-tilt class="thumbnail rounded">
                 <img class="img-fluid" src="./img/tech/api.jpg" />
               </div>
-              <div style="text-align: center; margin-top: 10px; color: black;">API</div>
+              <div style="text-align: center; margin-top: 10px; color: black;">Cloud Services</div>
           </a>
         </div>
         
