[Shubham][23-4] Portfolio - change in button

--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
                     height: 35px;"/>
                   </a>
               </div>
-              <a target="_blank" class="cta-btn cta-btn--hero" href="https://shubham-cinemate.netlify.app/">
+              <a target="_blank" class="btn btn_live" href="https://shubham-cinemate.netlify.app/">
                 See Live
               </a>
             </div>
@@ -679,9 +679,15 @@
                   </a>
                 </a>
               </div>
-              <a target="_blank" class="cta-btn cta-btn--hero" href="https://wonderful-roentgen-9c91d2.netlify.app/">
+              <a target="_blank" class="Rec" href="https://wonderful-roentgen-9c91d2.netlify.app/">
                 See Live
               </a>
+              <button class="Rec">
+                <span class="dot"></span>
+                <a target="_blank" href="https://wonderful-roentgen-9c91d2.netlify.app/" class="button-link">
+                    See Live
+                </a>
+              </button>
             </div>
           </div>
           <div class="col-lg-8 col-sm-12">
