--- a/index.html
+++ b/index.html
@@ -491,9 +491,12 @@
                   height: 35px;"/>
                 </a>
               </div>
-              <a target="_blank" class="cta-btn cta-btn--hero" href="https://sportify-ss.netlify.app/">
-                See Live
-              </a>
+              <button class="Rec">
+                <span class="dot"></span>
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://sportify-ss.netlify.app/" class="button-link">
+                  See Live
+                </a>
+              </button>
             </div>
             </div>
           </div>
@@ -679,9 +682,6 @@
                   </a>
                 </a>
               </div>
-              <a target="_blank" class="Rec" href="https://wonderful-roentgen-9c91d2.netlify.app/">
-                See Live
-              </a>
               <button class="Rec">
                 <span class="dot"></span>
                 <a target="_blank" href="https://wonderful-roentgen-9c91d2.netlify.app/" class="button-link">
