[Shubham][23-4] Portfolio - change in button

--- a/index.html
+++ b/index.html
@@ -552,9 +552,12 @@
                     height: 35px;"/>
                   </a>
               </div>
-              <a target="_blank" class="btn btn_live" href="https://shubham-cinemate.netlify.app/">
-                See Live
-              </a>
+              <button class="Rec">
+                <span class="dot"></span>
+                <a target="_blank" href="https://shubham-cinemate.netlify.app/" class="button-link">
+                  See Live
+                </a>
+              </button>
             </div>
           </div>
         </div>
@@ -593,9 +596,12 @@
                     height: 35px;"/>
                   </a>
               </div>
-              <a target="_blank" class="cta-btn cta-btn--hero" href="https://movie-recommender-397r.onrender.com/">
-                See Live
-              </a>
+              <button class="Rec">
+                <span class="dot"></span>
+                <a target="_blank" href="https://movie-recommender-397r.onrender.com/" class="button-link">
+                  See Live
+                </a>
+              </button>
             </div>
           </div>
           <div class="col-lg-8 col-sm-12">
@@ -645,9 +651,12 @@
                   <i class="fab fa-css3-alt" style="font-size: 2rem;"></i>
                 </a>
               </div>
-              <a target="_blank" class="cta-btn cta-btn--hero" href="https://soundsavvy.netlify.app/">
-                See Live
-              </a>
+              <button class="Rec">
+                <span class="dot"></span>
+                <a target="_blank" href="https://soundsavvy.netlify.app/" class="button-link">
+                  See Live
+                </a>
+              </button>
             </div>
             </div>
           </div>
