[Shubham][23-4] Portfolio - change in button

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
   <section class="showcase">
     <header>
       <h1 class="logo"></h1>
-      <div class="toggle"></div>
+      <div class="toggle">HOME</div>
     </header>
     <video src="Me.mp4" muted loop autoplay ></video>
     <div class="overlay"></div>
