[Shubham][5-5] SugarCheck AI

--- a/index.html
+++ b/index.html
@@ -664,10 +664,10 @@
         <div class="row" style="margin-top: 50px;">
           <div class="col-lg-4 col-sm-12">
             <div class="project-wrapper__text">
-              <h3 class="project-wrapper__text-title">SCREEN BOX - <a><i class="fas fa-desktop" style="font-size: 1rem;"></i></a></h3>
+              <h3 class="project-wrapper__text-title">SugarCheck AI - <a><i class="fas fa-desktop" style="font-size: 1rem;"></i></a></h3>
               <div>
                 <p class="mb-4">
-                  An online screen recording application that allows the user to save the video after the recording.
+                  The Diabetes Checkup Application predicts diabetes based on user-inputted health data using a trained Random Forest Classifier. Users can enter key health metrics such as glucose levels, blood pressure, and BMI, while the app provides predictions, statistical insights, and visual comparisons with training data. It also displays model accuracy to ensure reliable results.
                 </p>
                 <div>
                   <p>
@@ -675,7 +675,10 @@
                     Server Details -
                     </b>
                     <div>
-                    Frontend : Netlify ⭐️⭐️⭐️⭐️⭐️
+                    Frontend : Streamlit ⭐️⭐️⭐️⭐️
+                    </div>
+                    <div>
+                    Backend : Streamlit ⭐️⭐️⭐️⭐️
                     </div>
                   </p>
                 </div>
@@ -693,7 +696,7 @@
               </div>
               <button class="Rec">
                 <span class="dot"></span>
-                <a target="_blank" href="https://wonderful-roentgen-9c91d2.netlify.app/" class="button-link">
+                <a target="_blank" href="https://mldiabetesprediction.streamlit.app/" class="button-link">
                     See Live
                 </a>
               </button>
