--- a/index.html
+++ b/index.html
@@ -705,7 +705,7 @@
           <div class="col-lg-8 col-sm-12">
             <a class="portfolio-item" href="#!">
                 <div data-tilt class="thumbnail rounded">
-                  <img class="img-fluid" src="./img/projects/ScreenBox.png" />
+                  <img class="img-fluid" src="./img/projects/SugarCheck.png" />
                 </div>
             </a>
           </div>
