[Shubham][5-5] SugarCheck AI

--- a/index.html
+++ b/index.html
@@ -687,10 +687,11 @@
                 <a>
                   <a>
                     <i class="fab fa-github" style="font-size: 2rem;"></i>
-                    <i class="fab fa-react" style="font-size: 2rem;"></i>
-                    <i class="fab fa-js" style="font-size: 2rem;"></i>
-                    <i class="fab fa-html5" style="font-size: 2rem;"></i>
-                    <i class="fab fa-css3-alt" style="font-size: 2rem;"></i>
+                    <i class="fab fa-python" style="font-size: 2rem;"></i>
+                    <i class="fas fa-file-excel" style="font-size: 2rem;"></i>
+                    <i class="fas fa-table" style="font-size: 2rem;"></i>
+                    <i class="fas fa-magnifying-glass-chart" style="font-size: 2rem;"></i>
+                    <i class="fas fa-chart-line" style="font-size: 2rem;"></i>
                   </a>
                 </a>
               </div>
